[metadata]
name = hotelcuzco
version = 0.1.0
description = Hotel Cuzco booking system
license = MIT
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
zip_safe = False
install_requires =
    click
    pandas
    tabulate
scripts =
    bin/main.py
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[mypy]
ignore_missing_imports = True
warn_unused_configs = True

[tool:pytest]
addopts = -vv --capture=no --showlocals --exitfirst

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
